--- a/STESbuddy - Copy25/app/src/debug/res/values/google_maps_api.xml
+++ b/STESbuddy - Copy25/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBvd0L_sWrVvvK_WJiky4pfXeO6j43SVRI</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Required_key</string>
 </resources>
